--- a/statistical_analysis/data_analysis_of_z_boson.ipynb
+++ b/statistical_analysis/data_analysis_of_z_boson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "50ef10af",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving 3357 Z boson events to CSV...\n"
+     ]
     }
    ],
    "source": [
@@ -144,7 +151,15 @@
     "plt.title('Full Invariant Mass Distribution (0-120 GeV) with Z boson and Background (Stacked)')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# --- Save all selected Z boson events to CSV ---\n",
+    "\n",
+    "z_boson_events = data[(data['M'] >= mass_lower) & (data['M'] <= mass_upper)].copy()\n",
+    "\n",
+    "print(f\"Saving {len(z_boson_events)} Z boson events to CSV...\")\n",
+    "\n",
+    "z_boson_events.to_csv('/Users/xDAyN/Desktop/cs project/School Project/Statistical Analysis/z_boson_events_selected.csv', index=False)\n"
    ]
   }
  ],
