--- a/statistical_analysis/data_analysis.ipynb
+++ b/statistical_analysis/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bf7daa40",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
     "    2: 0.02,  # ~2% for ϒ(1S)\n",
     "    3: 0.02,  # ~2% for ϒ(2S)\n",
     "    4: 0.02,  # ~2% for ϒ(3S)\n",
-    "    5: 0.04   # 4% for Z boson\n",
+    "    5: 0.04   # 4% for Z boson (physics + detector combined)\n",
     "}\n",
     "\n",
     "def classify_mass(mass):\n",
@@ -181,7 +181,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "# --- 4. Print Label Distribution ---\n",
+    "# --- 4. Print Label Distribution ---›\n",
     "\n",
     "print(\"Label distribution:\")\n",
     "print(data['label'].value_counts().sort_index().rename(index=class_names))\n"
