--- a/machine_learning/class_predictor_v1.ipynb
+++ b/machine_learning/class_predictor_v1.ipynb
@@ -405,13 +405,7 @@
     "| **Z boson**    | 0.55      | 1.00   | 0.71 | 796     | 🔺 Moderate FP    | ✅ Zero FN              | All real Z bosons are caught — possibly over-predicting   |\n",
     "| **Background** | 0.96      | 0.69   | 0.81 | 16603   | ✅ Low FP          | 🔻 High FN             | Many background events are misclassified as signals       |\n",
     "\n",
-    "If you were trying to predict everything correctly, you would most likely need to increase the samples of the less represented classes in order to make the model train on them \n",
-    "\n",
-    "more. However, since the focus of this project is  on Z Bosons - we catch all real Z Bosons, which is the most useful scenario for us. False Positives are acceptable as long as \n",
-    "\n",
-    "there are no False Negatives, because we filter out the true Z Boson events in the end anyways. Using the threshold boundaries, our base accuracy is over 70%, but the model \n",
-    "\n",
-    "doesn't seem to be learning anymore."
+    "If you were trying to predict everything correctly, you would most likely need to increase the samples of the less represented classes in order to make the model train on them more. However, since the focus of this project is  on Z Bosons - we catch all real Z Bosons, which is the most useful scenario for us. False Positives are acceptable as long as there are no False Negatives, because we filter out the true Z Boson events in the end anyways. Using the threshold boundaries, our base accuracy is over 70%, but the model doesn't seem to be learning anymore."
    ]
   },
   {
